--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <title>Raymond Wu</title>
     <link href="https://fonts.googleapis.com/css2?family=Jost&family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
+    <meta name="description" content="Hi there! I am a graduatae student in Cognitive Science at the University of British Columbia.">
+    <meta name="keywords" content="Raymond Wu">
 </head>
 <body>
 
