--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="#background">WORK</a></li>
                 </ul>
             </nav>
-            <h1 id="name">RAYMOND WU</h1>
+            <h1 id="name">RAYMONd WU</h1>
             <h1 id="role">Cognitive Science and Experimental Psychology</h1>
             <a href = "#intro" class="arrow"></a>
         </section>
