--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <div id = "intro2">
             <div id = "CV">
-                <p id = "CVtext">University Profile </p>
+                <p id = "CVtext">Profile </p>
                 <a href = "https://psych.ubc.ca/profile/raymond-wu/" target="_blank" rel="noopener noreferrer"><span id = "CVlink"></span></a>
             </div>
     
