--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <p>         
          
             <span id = footertext>
-            6398 University Boulevard 
+            2136 West Mall 
             <br>Vancouver, BC V6T 1Z4</br> Canada</span></p>
         </div>
     </div>
