--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div id = "about_text"> <p> Hi there! I'm Raymond, 
                 a graduate student researcher
                     living in <s>Toronto</s> Vancouver <img src="to.gif">. My goal is to
-                    collaborate with nice people <img src="handshake.gif"> to better our understanding of statistical models of human
+                    collaborate with nice people <img src="handshake.gif"> to improve our understanding of statistical models of human
                     behavior <img src = "slot.gif">.</p></div>
         </section>
 
