--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             "https://www.utoronto.ca/" 
             target="_blank" rel="noopener noreferrer">University of
             Toronto.</a> Outside of work, I enjoy playing video games, 
-            trying tasty foods, and walking around with friends.
+            trying tasty foods, and walking with friends.
         </p></div>
     </section>
 
