--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
         </section>
 
     <section id = "about">
-        <div id = "about_text"> <p> Before starting graduate school at <a href = 
+        <div id = "about_text"> <p> Before graduate school at <a href = 
             "https://www.ubc.ca/" target="_blank" rel="noopener noreferrer">
             University of British Columbia</a>,
             I completed my BSc (Hons) in Psychology at <a href = 
             "https://www.utoronto.ca/" 
             target="_blank" rel="noopener noreferrer">University of
-            Toronto.</a> Outside of work, I enjoy playing video games, 
+            Toronto.</a> Outside work, I enjoy playing video games, 
             trying tasty foods, and walking with friends.
         </p></div>
     </section>
