--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             I completed my BSc (Hons) in Psychology at <a href = 
             "https://www.utoronto.ca/" 
             target="_blank" rel="noopener noreferrer">University of
-            Toronto.</a> Outside work, I enjoy playing video games, 
+            Toronto</a>. Outside work, I enjoy playing video games, 
             trying tasty foods, and walking with friends.
         </p></div>
     </section>
