--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <section id = "research">
         <div id = "research_text"> <p>
-           My research focuses on decisions to engage in costly behaviors. A condition that plagues humans is that we make poor choices. 
+           We all make poor choices. It is a condition that plagues humans and motivates my research.
            Why are impulses difficult to control? 
            How can we attain our goals? How does
             digital technology help (or harm) the ability
