--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <section id = "research">
         <div id = "research_text"> <p>
-          A condition that plgues humans is that we make poor choices. This motivates my work.
+          Humans are plagued by poor choices. This motivates my research.
            Why are impulses difficult to control? 
            How can we attain our goals? How does
             digital technology help (or harm) the ability
