--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <div id = "research_text"> <p>
           Humans are plagued by poor choices. This motivates my research.
            Why are impulses difficult to control? 
-           How can we attain our goals? How does
-            digital technology help (or harm) the ability
+           How do we attain our goals? Does
+            digital technology help (or harm) our ability
            to make good choices?
 
         </p></div>
