--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         </section>
 
     <section id = "about">
-        <div id = "about_text"> <p> Before I came to <a href = 
+        <div id = "about_text"> <p> Before coming to <a href = 
             "https://www.ubc.ca/" target="_blank" rel="noopener noreferrer">
             University of British Columbia</a>,
-            I completed my BSc (Hons) in Psychology at <a href = 
+            I completed my BSc (Hons) in Psychology at Lo<a href = 
             "https://www.utoronto.ca/" 
             target="_blank" rel="noopener noreferrer">University of
             Toronto</a>. Outside of work, I enjoy playing video games, 
