--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div id = "about_text"> <p> Before coming to <a href = 
             "https://www.ubc.ca/" target="_blank" rel="noopener noreferrer">
             University of British Columbia</a>,
-            I completed my BSc (Hons) in Psychology at Lo<a href = 
+            I completed my BSc (Hons) in Psychology at <a href = 
             "https://www.utoronto.ca/" 
             target="_blank" rel="noopener noreferrer">University of
             Toronto</a>. Outside of work, I enjoy playing video games, 
