--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div id = "research_text"> <p>
           Humans are plagued by poor choices. This motivates my research.
            Why are impulses difficult to control? 
-           How do we attain our goals? Does
+           How do we achieve our goals? Does
             digital technology help (or harm) our ability
            to make good choices?
 
