--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 
     <section id = "research">
         <div id = "research_text"> <p>
-          Humans are plagued by poor choices. This motivates my research.
+          Humans are plagued by poor decisions. This motivates my research.
            Why are impulses difficult to control? 
            How do we achieve our goals? Does
             digital technology help (or harm) our ability
-           to make good choices?
+           to make better decisions?
 
         </p></div>
     </section>
