--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
             I completed my BSc (Hons) in Psychology at <a href = 
             "https://www.utoronto.ca/" 
             target="_blank" rel="noopener noreferrer">University of
-            Toronto</a>. Outside of work, I enjoy playing video games, 
-            trying tasty foods, and walking around with friends.
+            Toronto</a>. Outside of work, I enjoy trying tasty foods, playing video games, and walking around with friends.
         </p></div>
     </section>
 
