--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <section id = "research">
         <div id = "research_text"> <p>
-          Humans are plagued by poor decisions. This motivates my research.
+          Humans often make poor decisions. This motivates my research.
            Why are impulses difficult to control? 
            How do we achieve our goals? Does
             digital technology help (or harm) our ability
