--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
     <section id = "research">
         <div id = "research_text"> <p>
           Humans often make poor decisions. This motivates my research.
-           Why are impulses difficult to control? 
-           How do we achieve our goals? Does
+           Why are impulses difficult to control? Does
             digital technology help (or harm) our ability
            to make better decisions?
 
