--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <section id = "research">
         <div id = "research_text"> <p>
-          Humans often make poor decisions. This motivates my research.
+          People often develop bad habits. My research asks questions like...
            Why are impulses difficult to control? What motivates the pursuit of costly activities? Does
             digital technology help (or harm) our ability
            to make better decisions?
