--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         <div id = "about_text"> <p> Before coming to <a href = 
             "https://www.ubc.ca/" target="_blank" rel="noopener noreferrer">
             University of British Columbia</a>,
-            I completed my BSc (Hons) in Psychology at <a href = 
+            I completed my BSc (Hons) at <a href = 
             "https://www.utoronto.ca/" 
             target="_blank" rel="noopener noreferrer">University of
-            Toronto</a>. Outside of work, I enjoy trying tasty foods, playing video games, and walking around with friends.
+            Toronto</a>. When I get the chance, I enjoy playing video games, trying tasty foods, and walking around with friends.
         </p></div>
     </section>
 
