--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 
     <section id = "research">
         <div id = "research_text"> <p>
-          People often develop bad habits. My research asks questions like...
-           Why are impulses difficult to control? What motivates the pursuit of costly activities? Does
-            digital technology help (or harm) our ability
+          People often develop bad habits. This motivates my research.
+           Why are impulses difficult to control? What drives the pursuit of costly activities? Does
+            digital technology harm (or help) our ability
            to make better decisions?
 
         </p></div>
