--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <section id = "research">
         <div id = "research_text"> <p>
-          People often develop bad habits. This motivates my research.
+          Everyone has bad habits. This motivates my research.
            Why are impulses difficult to control? What drives the pursuit of costly activities? Does
             digital technology harm (or help) our ability
            to make better decisions?
