--- a/index.html
+++ b/index.html
@@ -35,11 +35,10 @@
 
     <section id = "research">
         <div id = "research_text"> <p>
-          Everyone has bad habits. This motivates my research.
-           Why are impulses difficult to control? What drives the pursuit of costly activities? Does
-            digital technology harm (or help) our ability
-           to make better decisions?
-
+          My research seeks to integrate insights from cognitive science, social psychology, and addiction research to 
+            improve our understanding of why and how people decide to engage in costly behaviors.
+            Why are impulses difficult to control? What drives the pursuit of harmful activities? 
+            Does digital technology help or harm our ability to make good choices?
         </p></div>
     </section>
 
