--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
     <section id = "research">
         <div id = "research_text"> <p>
-          My research seeks to integrate insights from cognitive science, social psychology, and addiction research to 
-            improve our understanding of why and how people decide to engage in costly behaviors.
+          My research seeks to improve our understanding of 
+            why and how people decide to engage in costly behaviors.
             Why are impulses difficult to control? What drives the pursuit of harmful activities? 
             Does digital technology help or harm our ability to make good choices?
         </p></div>
