--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
 
     <section id = "research">
         <div id = "research_text"> <p>
-          My research seeks to improve our understanding of 
-            why and how people decide to engage in costly behaviors.
-            Why are impulses difficult to control? What drives the pursuit of harmful activities? 
+          My research focuses on addictive behaviors (e.g., 🎰🍺🍔).
+            Why are impulses difficult to control? What motivates the pursuit of costly activities? 
             Does digital technology help or harm our ability to make good choices?
         </p></div>
     </section>
