--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 
     <section id = "research">
         <div id = "research_text"> <p>
-          My research focuses on addictive behaviors (e.g., 🎰🎮🍺🍔🧁).
-            Why are impulses difficult to control 😋? What drives the pursuit of costly activities ⛽? 
-            Does digital technology help or harm our ability to make good choices 📱?
+          My research focuses on addictive behaviors (🎰🎮🍺🍔🧁).
+            Why are impulses difficult to control😋? What drives the pursuit of costly activities⛽? 
+            Does digital technology help or harm our ability to make good choices📱?
         </p></div>
     </section>
 
