--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <section id = "research">
         <div id = "research_text"> <p>
-          My research focuses on addictive behaviors (e.g., 🎰🎮🍺🍔🧁).
+          My research focuses on addictive behaviors🎰🎮🍺.
             Why are impulses difficult to control😋? What drives the pursuit of costly activities⛽? 
             Does digital technology help or harm our ability to make good choices📱?
         </p></div>
