--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
                 </ul>
             </nav>
             <h1 id="name">RAYMOND WU</h1>
-            <h1 id="role">Graduate Student in Cognitive Science</h1>
+            <h1 id="role">Graduate Student in 
+                <span style = "color:#C60021">Cognitive Science</span>
+                </h1>
             <a href = "#intro" class="arrow"></a>
         </section>
 
@@ -27,24 +29,30 @@
 
     <section id = "intro">
             <div id = "intro_text"> <p> Hi there! I'm Raymond, 
-                a graduate student researcher
-                    living in <s>Toronto</s> Vancouver <img src="to.gif">. My goal is to
-                    collaborate with nice people <img src="handshake.gif"> and use statistical models to
-                    improve our understanding of human behavior <img src = "slot.gif">.</p></div>
+                a <span style = "color:#C60021">graduate student </span>researcher
+                    living in <s>Toronto</s> Vancouver <img src="to.gif" class="gifs">. 
+                    My goal is to <span style = "color:#C60021">collaborate 
+                    </span> with nice people <img src="handshake.gif" class="gifs"> 
+                    and use statistical models (from behavioral, survey,
+                     and physiological data) to improve our understanding of 
+                     <span style = "color:#C60021">human behavior</span> <img src = "slot.gif" class="gifs">.
+                </p></div>
         </section>
 
     <section id = "research">
         <div id = "research_text"> <p>
-          My research focuses on addictive behaviors🎰🎮🍺.
-            Why are impulses difficult to control😋? What drives the pursuit of costly activities⛽? 
-            Does digital technology help or harm our ability to make good choices📱?
+          Specifically, my research programs focus on: <br>
+          😋 <span style = "color:#C60021">Self-control </span>in addictive behaviors. <br>
+          🧠 Theoretical foundations of <span style = "color:#C60021">decision-making</span>. <br>
+          📱 Role of <span style = "color:#C60021">digital technology </span>in addiction.
         </p></div>
     </section>
 
     <div id = "background">
 
         <div id = "education">
-            <p id = "educationtext">Twitter</p>
+            <p id = "educationtext">
+                Twitter </p>
             <a href = "https://twitter.com/rayrwu" target="_blank" rel="noopener noreferrer"><span id = "rationalelink"></span></a>
 
         </div>
