--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div id = "research_text"> <p>
           Specifically, my research programs focus on: <br>
           😋 <span style = "color:#C60021">Self-control </span>in addictive behaviors. <br>
-          🧠 Theoretical foundations of <span style = "color:#C60021">decision-making</span>. <br>
+          🧠 Theoretical accounts of <span style = "color:#C60021">decision-making</span>. <br>
           📱 Role of <span style = "color:#C60021">digital technology </span>in addiction.
         </p></div>
     </section>
