--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </nav>
             <h1 id="name">RAYMOND WU</h1>
             <h1 id="role">Graduate Student in 
-                <span style = "color:#C60021">Cognitive Science</span>
+                <span style = "color:#86a96f">Cognitive Science</span>
                 </h1>
             <a href = "#intro" class="arrow"></a>
         </section>
@@ -29,22 +29,22 @@
 
     <section id = "intro">
             <div id = "intro_text"> <p> Hi there! I'm Raymond, 
-                a <span style = "color:#C60021">graduate student </span>researcher
-                    living in <s>Toronto</s> Vancouver <img src="to.gif" class="gifs">. 
-                    My goal is to <span style = "color:#C60021">collaborate 
+                a <span style = "color:#86a96f">graduate student </span>researcher
+                    living in Vancouver <s>Toronto</s> <img src="to.gif" class="gifs">. 
+                    My goal is to <span style = "color:#86a96f">collaborate 
                     </span> with nice people <img src="handshake.gif" class="gifs"> 
                     and use statistical models (from behavioral, survey,
                      and physiological data) to improve our understanding of 
-                     <span style = "color:#C60021">human behavior</span> <img src = "slot.gif" class="gifs">.
+                     <span style = "color:#86a96f">human behavior</span> <img src = "slot.gif" class="gifs">.
                 </p></div>
         </section>
 
     <section id = "research">
         <div id = "research_text"> <p>
-          Specifically, my research programs focus on: <br>
-          😋 <span style = "color:#C60021">Self-control </span>in addictive behaviors. <br>
-          🧠 Theoretical accounts of <span style = "color:#C60021">decision-making</span>. <br>
-          📱 Role of <span style = "color:#C60021">digital technology </span>in addiction.
+          Specifically, my research adventures span... <br>
+          😋 <span style = "color:#86a96f">Self-control </span>in addictive behaviors <br>
+          🧠 Theoretical accounts of <span style = "color:#86a96f">decision-making</span> <br>
+          📱  <span style = "color:#86a96f">Digital technology </span>in addiction
         </p></div>
     </section>
 
