--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <section id = "research">
         <div id = "research_text"> <p>
-          Specifically, my rlines of research span... <br>
+          Specifically, my lines of research span... <br>
           😋 <span style = "color:#86a96f">Self-control </span>in addictive behaviors <br>
           🧠 Theoretical accounts of <span style = "color:#86a96f">decision-making</span> <br>
           📱  <span style = "color:#86a96f">Digital technology </span>in addiction
