--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         <div class = "space"></div>
 
     <section id = "intro">
-            <div id = "intro_text"> <p> Hello, I'm Raymond. I use statistical models from
-                large-scale survey, behavioural, and physiological data to better our understanding 
-                of human behaviour.
+            <div id = "intro_text"> <p> Hello, I'm Raymond. I design and conduct experiments using
+                large-scale survey, behavioural, and physiological appraoches to better our understanding 
+                of decision-making and addiction in humans. 
 
                 </p></div>
         </section>
