--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <section id = "intro">
             <div id = "intro_text"> <p> Hello, I'm Raymond. I design and conduct experiments using
-                large-scale survey, behavioural, and physiological appraoches to better our understanding 
+                large-scale survey, behavioural, and physiological techniques to better our understanding 
                 of decision-making and addiction in humans. 
 
                 </p></div>
