--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section id = "intro">
             <div id = "intro_text"> <p> Hello, I'm Raymond. I design and conduct experiments using
                 large-scale survey, behavioural, and physiological techniques to better our understanding 
-                of decision-making and addiction in humans. 
+                of decision-making, technology use, and addiction in humans. 
 
                 </p></div>
         </section>
