--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class = "space"></div>
 
     <section id = "intro">
-            <div id = "intro_text"> <p> Hello, I'm Raymond. I design and conduct experiments using
+            <div id = "intro_text"> <p> Hello, I'm Raymond. I design, conduct, and analyze data from experiments using
                 large-scale survey, behavioural, and physiological techniques to better our understanding 
                 of decision-making, technology use, and addiction in humans. 
 
