--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </nav>
             <h1 id="name">RAYMOND WU</h1>
             <h1 id="role">Graduate Student in 
-                <span style = "color:#02a1c0">Cognitive Science</span>
+                Cognitive Science
                 </h1>
             <a href = "#" onclick = "scrollToSection(event, 'intro')"  
                         class="arrow"></a>
@@ -32,13 +32,17 @@
         </section>
 
         <div class = "space"></div>
+        
 
     <section id = "intro">
-            <div id = "intro_text"> <p> Hello, I'm Raymond. I design, conduct, and analyze data from experiments using
-                large-scale survey, behavioural, and physiological techniques to better our understanding 
-                of decision-making, digital technology use, and addiction in humans. 
 
-                </p></div>
+            <div id = "intro_text"> 
+              <p> 
+
+                My research uses large-scale survey, behavioural, and physiological data to
+              better our understanding of decision-making, digital technology use, and addiction in humans.</p>
+
+            </div>
         </section>
 
         <div class = "space"></div>
