--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
         <section id = "home">
             <nav>
                 <ul class = "navlist">
-                  <li ><a href="https://drive.google.com/file/d/1OKBcapF05Cp5t-AfngyNQPExtbqWQBk7/view?usp=drive_link"
-                    class = "ftext" style = "text-decoration: none" 
-                    target="_blank" rel="noopener noreferrer"
+                  <li ><a href= "CV"
+                    target="_blank" rel = "noreferrer noopener"
                     >DOWNLOAD CV</a></li>
 
                 </ul>
@@ -39,7 +38,7 @@
             <div id = "intro_text"> 
               <p> 
 
-                My research uses large-scale survey, behavioural, and physiological data to
+              My research focuses on using large-scale survey, behavioural, and physiological data to
               better our understanding of decision-making, digital technology use, and addiction in humans.</p>
 
             </div>
