--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
               We don't always make the best choices. <br>
               My research uses large-scale survey, behavioural, and physiological data to
-              better understand decision-making, digital technology use, and addiction in humans.</p>
+              gain insight into decision-making, digital technology use, and addiction in humans.</p>
 
             </div>
         </section>
