--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <section id = "home">
             <nav class = "nav">
                 <ul class = "navlist">
-                  <li ><a href= "CV.html"
+                  <li ><a href= "CV"
                     target="_blank" rel = "noreferrer noopener"
                     >&nbspDOWNLOAD CV&nbsp</a></li>
 
