--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <div id = "intro_text"> 
               <p> 
 
-              We don't always make the best choices. <br>
-              My research uses large-scale survey, behavioural, and physiological data to
+              We don't always make the best choices. 
+              My research uses a combination of large-scale survey, behavioural, and physiological data to
               gain insight into decision-making, digital technology use, and addiction in humans.</p>
 
             </div>
