--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
             <div id = "intro_text"> 
               <p> 
 
-              We don't always make the best choices. 
-              My research uses a combination of large-scale survey, behavioural, and physiological data to
+              Excessive engagement in pleasurable activities, such as gambling and video gaming, can burden
+               life and society.
+              My research focuses on designing experiments and using a combination of large-scale survey, behavioral,
+             and physiological data to
               gain insight into decision-making, digital technology use, and addiction in humans.</p>
 
             </div>
