--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <div id = "intro_text"> 
               <p> 
 
-              Excessive engagement in pleasurable activities, such as gambling and video gaming, can burden
-               life and society.
+              Excessive consumption of rewarding activities, such as gambling and video gaming, can burden
+               life and society <br><br>
               My research focuses on designing experiments and using a combination of large-scale survey, behavioral,
              and physiological data to
               gain insight into decision-making, digital technology use, and addiction in humans.</p>
