--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div id = "intro_text"> 
               <p> 
 
-              Excessive consumption of rewarding activities, such as gambling and video gaming, can burden
+              Excessive consumption of rewarding activities, such as gambling and video gaming, can place a tremendous burden on
                life and society <br><br>
               My research focuses on designing experiments and using a combination of large-scale survey, behavioral,
              and physiological data to
