--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             <div id = "intro_text"> 
               <p> 
 
-              Excessive consumption of rewarding activities, such as gambling and video gaming, can place a tremendous burden on
+              Excessive consumption of rewarding activities like gambling and video gaming can place a tremendous burden on
                life and society <br><br>
               My research focuses on designing experiments and using a combination of large-scale survey, behavioral,
              and physiological data to
-              gain insight into decision-making, digital technology use, and addiction in humans.</p>
+              gain insights into decision-making, digital technology use, and addiction in humans</p>
 
             </div>
         </section>
