--- a/CV.html
+++ b/CV.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Raymond Wu CV</title>
+    <title>Raymond's CV</title>
     <link href="https://fonts.googleapis.com/css2?family=Jost&family=DM+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <meta name="description" content="Hi there! I'm Raymond, a graduate student in Cognitive Science at the University of British Columbia.">
