--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </ul>
             </nav>
             <h1 id="name">RAYMOND WU</h1>
-            <h1 id="role">Graduate Student in 
+            <h1 id="role">PhD Student in 
                 Cognitive Science
                 </h1>
             <a href = "#" onclick = "scrollToSection(event, 'intro')"  
@@ -107,7 +107,6 @@
 
 
 </script>
-
 
 </body>
 </html>
