--- a/CV.html
+++ b/CV.html
@@ -9,7 +9,7 @@
 
 <body>
 
-      <embed src = "gradmats.pdf" 
+      <embed src = "CVupdated_Wu.pdf" 
       width = 100% height = 100%>
 
 </body>
