--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
             <nav class = "nav">
                 <ul class = "navlist">
                   <li >
-
-                    <a href = "index">&nbspHome&nbsp&nbsp</a>
+                    <a href = "https://raymondwu.ca/" >&nbspHome&nbsp&nbsp</a>
                     <a href = "about">&nbspAbout&nbsp&nbsp</a>
                     
                     <a href = "projects">&nbspProjects&nbsp&nbsp</a>
