--- a/teaching.html
+++ b/teaching.html
@@ -14,11 +14,11 @@
         <nav class = "nav">
             <ul class = "navlist">
               <li >
-                <a href = "https://raymondwu.ca/" >&nbspHome&nbsp&nbsp</a>
-                <a href = "about">&nbspAbout&nbsp&nbsp</a>
+                <a href = "https://raymondwu.ca/" >&nbspHOME&nbsp&nbsp</a>
+                <a href = "about">&nbspABOUT&nbsp&nbsp</a>
                 
-                <a href = "projects">&nbspProjects&nbsp&nbsp</a>
-                <a href = "teaching">&nbspTeaching&nbsp</a>
+                <a href = "projects">&nbspPROJECTS&nbsp&nbsp</a>
+                <a href = "teaching">&nbspTEACHING&nbsp</a>
 
                 <a href= "CV"
                 target="_blank" rel = "noreferrer noopener"
@@ -35,6 +35,12 @@
 
             <div id = "intro_text"> 
               <p> 
+
+
+I'm happy to give guest lectures, so feel free to reach out 
+if my research is relevant to your course.
+
+</br></br>
                 
 Courses TA'd:</br>
 - PSYC 101 Introduction to Biological and Cognitive Psychology</br>
@@ -48,7 +54,7 @@ Courses TA'd:</br>
 Courses Supervised:</br>
 - PSYC 214 Research Experience</br>
 - PSYC 340/440 Directed Studies in Psychology</br>
-- PSYC 449 Honours Seminar and Essay (forthcoming, 2024)
+- PSYC 449 Honours Seminar and Essay 
     </p>
 
             </div>
