--- a/about.html
+++ b/about.html
@@ -71,15 +71,16 @@ University of British Columbia, Vancouver.
 <p id = "intro2_text">
 
 <span class = "hidden">
-  <span id = "intro2_head">SOWN SEEDS</span> <br>
-I grew up in Toronto (Scarborough district). In my youth, I was not sure if I would make it to, and then through,
+  <span id = "intro2_head">SOWN SEEDS&#X1F339</span> <br>
+I grew up in Scarborough, a district in Toronto. In my youth, I was not sure if I would make it to,
+and later through,
 undergrad, let alone envisioning becoming an "academic" or a "scientist".
-But, my longing continued to grow and this prospect slowly became more and more conceivable.
+But, my longing continued to grow, and this prospect became increasingly more conceivable.
 <br><br>
 </span>
 
 <span class = "hidden">
-<span id = "intro2_head">DRIVE AND DIRECTION</span> <br>
+<span id = "intro2_head">DRIVE AND DIRECTION &#x1F699</span> <br>
 I am passionate about the craft and rigour at each stage of the research process, from conceptualization
 to analysis & writing to public outreach. My goal is to advance our
 knowledge of human behavior, reduce harms associataed with digital technology
@@ -87,7 +88,7 @@ use, and inform evidence-based policies. <br><br>
 </span>
 
 <span class = "hidden">
-<span id = "intro2_head">RESEARCH ETHOS </span><br>
+<span id = "intro2_head">RESEARCH ETHOS &#x1F496 </span><br>
 My work is rooted in transparency. This includes open science practices, having made all my 
 articles and data publicy available (<a href= "https://www.osf.io/anm2z" target="_blank" rel = "noreferrer noopener" 
 class = "aboutlink">here</a>). My graduate school application
@@ -96,19 +97,19 @@ class = "aboutlink">PDF</a>) in hopes that it will be helpful for prospective gr
 </span>
 
 <span class = "hidden">
-<span id = "intro2_head">WORKING TOGETHER</span><br>
+<span id = "intro2_head">WORKING TOGETHER &#x1F91D</span><br>
 One of my favorite part of work is collaborating with people, 
 especially in environments that foster 
  challenge and creativitiy as well as safety and inclusivity, whether it's for
- research, teaching, or public outreach. If anything catches your attention,
- feel free to reach out :)
+ research, teaching, or public outreach. If anything catches your attention, 
+ feel free to reach out.
 </span>
 
 
 <br><br><br>
 
-Along with research, I like to play sports, explore tasty foods, and relax with video games.
-
+<span class = "hidden">Along with research, I like to play sports, explore tasty foods, and relax with video games.
+</span>
 
 </p>
 
