--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Raymond Wu</title>
     <link href="https://fonts.googleapis.com/css2?family=Jost&family=DM+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Baskervville&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
+<link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,500&display=swap" rel="stylesheet">    <link rel="stylesheet" href="./style.css">
     <meta name="description" content="Hi there! I'm Raymond Wu, a PhD student in Cognitive Science,
     NSERC Doctoral Fellow, and member of the Centre for Gambling Research at the University of British Columbia.">
 </head>
