--- a/about.html
+++ b/about.html
@@ -72,10 +72,11 @@ University of British Columbia, Vancouver.
 
 <span class = "hidden">
   <span id = "intro2_head">SOWN SEEDS&#X1F339</span> <br>
-I grew up in Scarborough, a district in Toronto. In my youth, I was not sure if I would make it to,
-and later through,
-undergrad, let alone envisioning becoming an "academic" or a "scientist".
-But, my longing continued to grow, and this prospect became increasingly more conceivable.
+I grew up in Scarborough, a district in Toronto. In my youth, I was unsure
+if going to university was right for me. Envisioning becoming an 
+"academic" or a "scientist" was unrealistic.
+But, my longing for it continued to grow, and this prospect became 
+increasingly more conceivable through my undergrad journey.
 <br><br>
 </span>
 
