--- a/mentaleffort.html
+++ b/mentaleffort.html
@@ -29,39 +29,8 @@
             
     <section id = "intro">
 
-
-<div class = "boxhold">
-
-  
-  
-  <div id = "box6" class = "boxes">
-    <p>Coming 2024</p></div>
-
-  
-  
-    <div id = "box5" class = "boxes">
-    <p>Coming 2024</p></div>
-
-  
-  
-    <a href = "gamblingstreams" class = "boxes" style = "text-decoration: none">
-      <div id = "box1">
-      <p class = box_text>Emotional Effects of Gambling Livestreams</p></div></a>
-
-  
-  
-    <a href = "rationalizations" class = "boxes" style = "text-decoration: none">
-      <div id = "box1">
-      <p class = box_text>Rationalizations in Disordered Gambling</p></div></a>
-
-  
-    <a href = "mentaleffort" class = "boxes" style = "text-decoration: none">
-      <div id = "box1">
-      <p class = box_text>Mental Effort vs Boredom</p></div></a>
-
-  <a href = "strategies" class = "boxes" style = "text-decoration: none">
-    <div id = "box1">
-    <p class = box_text>Cognitive Strategies for Goal Pursuit</p></div></a>
+      <div id = "intro_text">
+<p>Coming Soon</p>
 
 </div>
         </section>
