--- a/about.html
+++ b/about.html
@@ -72,11 +72,11 @@ University of British Columbia, Vancouver.
 
 <span class = "hidden">
   <span id = "intro2_head">SOWN SEEDS&#X1F339</span> <br>
-I grew up in Scarborough, a district in Toronto. In my youth, I was unsure
-if going to university was right for me. Envisioning becoming an 
+I grew up in Toronto. In my youth, I was unsure
+if going to university was right for me, and envisioning becoming an 
 "academic" or a "scientist" was unrealistic.
-But, my longing for it continued to grow, and this prospect became 
-increasingly more conceivable through my undergrad journey.
+But, I longed for it, and this prospect became 
+more and more conceivable through my undergrad journey.
 <br><br>
 </span>
 
